samples/_failures_safe/1761166197_da1bdb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_77ccfdd1.c: In function ‘process_event’:
./samples/SAFE/__tmp_77ccfdd1.c:180:14: error: ‘STATE_PROCESS’ undeclared (first use in this function); did you mean ‘STATE_PROCESSING’?
  180 |         case STATE_PROCESS
      |              ^~~~~~~~~~~~~
      |              STATE_PROCESSING
./samples/SAFE/__tmp_77ccfdd1.c:180:14: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_77ccfdd1.c:180:9: error: expected ‘:’ or ‘...’ at end of input
  180 |         case STATE_PROCESS
      |         ^~~~
./samples/SAFE/__tmp_77ccfdd1.c:180:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_77ccfdd1.c:180:9: error: expected declaration or statement at end of input
